--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "rundev": "nodemon server.js"
+    "start": "npm install && node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
